[package]
name = "logicgate"
version = "0.2.0"
edition = "2021"
authors = ["Donjuan Platinum <donjuan@lecturify.net>"]
license = "MIT"
description = "Implementation of logic gates with NAND gates as the underlying layer Turing Complete"
repository = "https://github.com/donjuanplatinum/logicgate"
readme = "README.md"
documentation = "https://docs.rs/logicgate"
keywords = ["logicgate","algorithms"]
categories = ["logicgate"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]





